[package]
name = "bc"
version = "0.1.0"
authors = ["Magic Len <len@magiclen.org>"]
repository = "https://github.com/magiclen/bc"
homepage = "https://magiclen.org/bc"
keywords = ["bc", "timeout", "math", "parse", "equation"]
categories = ["science"]
description= "Use `bc` in the Rust Programming Language."
readme = "README.md"
license = "MIT"

[badges]
travis-ci = { repository = "magiclen/bc", branch = "master" }

[dependencies]
subprocess = "0.1.13"