[package]
name = "bc"
version = "0.1.10"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/bc"
homepage = "https://magiclen.org/bc"
keywords = ["bc", "timeout", "math", "parse", "equation"]
categories = ["science"]
description = "Use `bc` in the Rust Programming Language."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[badges.travis-ci]
repository = "magiclen/bc"
branch = "master"

[dependencies]
execute = "0.2.4"

[dev-dependencies]
assert_approx_eq = "1.1"