[package]
name = "bc"
version = "0.1.15"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.65"
repository = "https://github.com/magiclen/bc"
homepage = "https://magiclen.org/bc"
keywords = ["bc", "timeout", "math", "parse", "equation"]
categories = ["science"]
description = "Use `bc` in the Rust Programming Language."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
execute = "0.2"

[dev-dependencies]
assert-eq-float = "0.1"